nginx-lb/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: minigoodreads-nginx
spec:
    selector:
        matchLabels:
            app: minigoodreads-nginx
    template:
        metadata:
            labels:
                app: minigoodreads-nginx
        spec:
            containers:
                - name: minigoodreads-nginx
                  image: 'ghcr.io/petrosvoivontas/minigoodreads-fe:1.0.9'
                  resources:
                      limits:
                          memory: '500Mi'
                          cpu: '500m'
                  ports:
                      - containerPort: 80
            imagePullSecrets:
                - name: ghcr
