nginx-lb/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: minigoodreads-nginx-svc
spec:
    type: ClusterIP
    selector:
        app: minigoodreads-nginx
    ports:
        - name: nginx-port
          port: 80
          targetPort: 80
          protocol: TCP
